--- a/test.css
+++ b/test.css
@@ -442,29 +442,31 @@ footer {
 /* Jumbotron settings */
 
 .main-jumbotron-section {
-    text-align: center;
     background-color: rgb(255, 255, 255);
     max-height: 130px;
-    padding: 0;
-    margin: 0
+    padding-top: 0px;
+    margin-top: 55px;
+    text-align: center;
+    vertical-align: center
 }
 
 .main-jumbotron-section h2 {
     font-family: 'Kreon-Light';
     font-weight: 500;
+    position: relative;
+    top: -10px
 }
 
 .main-jumbotron-section p {
     font-family: 'Kreon-Light';
     font-weight: 500;
     color: rgb(175, 175, 175);
+    position: relative;
+    top: -15px;
 }
 
 .section-separator {
-    margin-top: 55px;
+    /* margin-top: 55px; */
     width: 890px;
-}
-
-.main-jumbotron-section+hr {
-    margin-top: 0
+    margin-bottom: 40px;
 }
