--- a/public/test.css
+++ b/public/test.css
@@ -46,6 +46,11 @@
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.08), 0 0 25px rgba(0, 0, 0, 0.08);
     }
     
+    #template-content {
+        display: flex;
+        flex-direction: column
+    }
+    
     main {
         flex-grow: 1
     }
