--- a/public/views/home.hbs
+++ b/public/views/home.hbs
@@ -1,130 +1,173 @@
+<link rel="stylesheet" type="text/css" href="./styles/home.css">
 
+<!-- Start of Navigation -->
+<nav>
 
+    <div class="top-header">
+        <a class="top-header-logo" href="/">
+            <img src="./pics/logo.png" class="top-header-logo-img">
+            <span class="top-header-logo-text">Chameleon</span>
+            <span class="top-header-slogan-text">Travel the World Now</span>
+        </a>
 
-<!-- End of CArousel -->
+        <div class="top-header-panel">
+            <div class="top-header-social-icons">
+                <a href="#"><img alt="Twitter" src="pics/twitter.png"></a>
+                <a href="#"><img alt="Rss" src="pics/rss.png"></a>
+                <a href="#"><img alt="Facebook" class="last-img" src="pics/facebook.png"></a>
+            </div>
 
-
-            <nav>
-
-                <div class="top-header">
-                    <a class="top-header-logo" href="/">
-                        <img src="./pics/logo.png" class="top-header-logo-img">
-                        <span class="top-header-logo-text">Chameleon</span>
-                        <span class="top-header-slogan-text">Travel the World Now</span>
-                    </a>
-
-                    <div class="top-header-panel">
-                        <div class="top-header-social-icons">
-                            <a href="#"><img alt="Twitter" src="pics/twitter.png"></a>
-                            <a href="#"><img alt="Rss" src="pics/rss.png"></a>
-                            <a href="#"><img alt="Facebook" class="last-img" src="pics/facebook.png"></a>
-                        </div>
-
-                        <div class="top-header-search">
-                            <form class="top-header-search-form" method="get">
-                                <input class="top-header-search-input" name="s" type="text" value="Search this website...">
-                                <input class="top-header-search-btn" src="pics/search_btn.png" type="image">
-                            </form>
-                        </div>
-                    </div>
-
-                    <ul class="top-header-nav" id="todor">
-                        <li><a href="#" class="first-el ivan">Home</a></li>
-                        <li><a href="#" class=" ivan">About</a></li>
-                        <li><a href="#" class=" ivan">Contact</a></li>
-                        <li><a href="#" class=" ivan">Page Templates</a></li>
-                        <li><a href="#" class=" ivan">Shortcodes</a></li>
-                        <li><a href="#" class=" ivan">Blog</a></li>
-
-
-                    </ul>
-
-
-                </div>
-                <a href="javascript:void(0);" style="font-size:15px;" class="top-header-display-icon" onclick="myFunction()">&#9776;</a>
-                <div class="secondary-header">
-                    <ul class="secondary-header-container">
-                        <div class="secondary-header-nav">
-                            <li><a href="#" class="first-el ">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Page Templates</a></li>
-                            <li><a href="#">Shortcodes</a></li>
-                            <li><a href="#">Blog</a></li>
-                            <li><a href="#">Page Templates</a></li>
-                            <li><a href="#">Shortcodes</a></li>
-                            <li><a href="#">Blog</a></li>
-                        </div>
-                    </ul>
-                </div>
-            </nav>
-            <!-- End of Nav -->
-            <main>
-                <!-- Start of CArousel -->
-                <div id="myCarousel" class="carousel slide" data-ride="carousel slide" data-interval="5000">
-
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <!-- Carousel pics -->
-    <div class="carousel-inner">
-
-        {{#carouselContent.result}}
-         {{#if @first}}
-        <div class="item active">
-            <img src={{image}} class="carousel-img">
-            <!-- CArousel main window caption -->
-            <div class="carousel-caption">
-                <h2>{{title}}</h2>
-                <p>{{summary}}</p>
-                <a href="#" class="btn carousel-caption-btn">Read More</a>
+            <div class="top-header-search">
+                <form class="top-header-search-form" method="get">
+                    <input class="top-header-search-input" name="s" type="text" value="Search this website...">
+                    <input class="top-header-search-btn" src="pics/search_btn.png" type="image">
+                </form>
             </div>
         </div>
-        {{else}}
-        <div class="item">
-            <img src={{image}} class="carousel-img">
-            <div class="carousel-caption">
-                <h2>{{title}}</h2>
-                <p>{{summary}}</p>
-                <a href="#" class="btn carousel-caption-btn">Read More</a>
-            </div>
-        </div>
-        {{/if}} {{/carouselContent.result}}
+
+        <ul class="top-header-nav" id="todor">
+            <li><a href="#" class="first-el">Home</a></li>
+            <li><a href="#" class="">About</a></li>
+            <li><a href="#" class=" ">Contact</a></li>
+            <li><a href="#" class=" ">Page Templates</a></li>
+            <li><a href="#" class=" ">Shortcodes</a></li>
+            <li><a href="#" class=" ">Blog</a></li>
+
+
+        </ul>
+
+
     </div>
+    <a href="javascript:void(0);" style="font-size:15px;" class="top-header-display-icon" onclick="myFunction()">&#9776;</a>
+    <div class="secondary-header">
+        <ul class="secondary-header-container">
+            <div class="secondary-header-nav">
+                <li><a href="#" class="first-el ">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Page Templates</a></li>
+                <li><a href="#">Shortcodes</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Page Templates</a></li>
+                <li><a href="#">Shortcodes</a></li>
+                <li><a href="#">Blog</a></li>
+            </div>
+        </ul>
+    </div>
+</nav>
+<!-- End of Nav -->
+<main>
+    <!-- Start of CArousel -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel slide" data-interval="5000">
 
-    <!-- Carousel navigation arrows -->
-    <span href="#myCarousel" class="right carousel-control" data-slide="next">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+        <!-- Carousel pics -->
+        <div class="carousel-inner">
+
+            {{#carouselContent.result}} {{#if @first}}
+            <div class="item active">
+                <img src={{image}} class="carousel-img">
+                <!-- CArousel main window caption -->
+                <div class="carousel-caption">
+                    <h2>{{title}}</h2>
+                    <p>{{summary}}</p>
+                    <a href="#" class="btn carousel-caption-btn">Read More</a>
+                </div>
+            </div>
+            {{else}}
+            <div class="item">
+                <img src={{image}} class="carousel-img">
+                <div class="carousel-caption">
+                    <h2>{{title}}</h2>
+                    <p>{{summary}}</p>
+                    <a href="#" class="btn carousel-caption-btn">Read More</a>
+                </div>
+            </div>
+            {{/if}} {{/carouselContent.result}}
+        </div>
+
+        <!-- Carousel navigation arrows -->
+        <span href="#myCarousel" class="right carousel-control" data-slide="next">
                     <span>
                          <img class="carousel-right-arrow" src="pics/carousel-right-arrow.png" />
                     </span>
-    </span>
-    <span href="#myCarousel" class="left carousel-control" data-slide="prev">
+        </span>
+        <span href="#myCarousel" class="left carousel-control" data-slide="prev">
                         <span>
                              <img class="carousel-left-arrow" src="pics/carousel-left-arrow.png" />
                         </span>
-    </span>
-</div>
-                <!-- End of CArousel -->
-                <!-- Start of Jumbotron  -->
-                <div class="jumbotron main-jumbotron-section">
-                    <hr class="section-separator">
+        </span>
+    </div>
+    <!-- End of CArousel -->
+    <!-- Start of Jumbotron  -->
+    <div class="jumbotron main-jumbotron-section">
+        <hr class="section-separator">
 
-                    <h2>"Travel is the only thing you buy that makes you richer"</h2>
-                    <p class="lead">He who does not travel does not know the value of men.</p>
+        <h2>"Travel is the only thing you buy that makes you richer"</h2>
+        <p class="lead">He who does not travel does not know the value of men.</p>
 
-                    <hr class="section-separator">
+        <hr class="section-separator">
+    </div>
+    <!-- End of Jumbotron  -->
+
+    <!-- Start of Main Section -->
+    {{!-- Top 3 images --}}
+    <section id="main-content" class="group">
+        <div class="previews">
+            {{#latestSportNews.result}}
+            <article class="preview">
+                <h2 class="preview__title">{{title}}</h2>
+                <div class="preview__image-container">
+                    <a href="#/posts/{{key}}" class="preview__anchor">
+                        <img src="{{image}}" alt="{{title}}" class="preview__image img-thumbnail">
+                        <span class="preview__hover-icon"></span>
+                    </a>
                 </div>
-                <!-- End of Jumbotron  -->
+                <p class="preview__summary">{{summary}}</p>
+            </article>
+            {{/latestSportNews.result}}
+        </div>
 
-                <!-- Start of Main Section -->
+        {{!-- End of 3 top images --}}
+        <div class="blog-media">
+            <aside class="blog-p">
+                <h4 class="blog-p__title">From The Blog</h4>
+                <ul class="blog-p__posts">
+                    {{#recentPosts.result}}
+                    <li><a href="{{id}}">{{title}}</a></li>
+                    {{/recentPosts.result}}
+                </ul>
+            </aside>
+            <aside class="media">
+                <h4 class="media__title">Multi-Media Bar</h4>
+                <div class="media__bar">
+                    {{#media.result}}
+                    <div class="media__img-container">
+                        <img src="{{imageUrl}}" alt="{{description}}" class="media__img">
+                        <span class="media__hover-icon"></span>
+                        <span class="media-hover-video-icon "></span>
+                        <div class="media__description">
+                            <p>{{description}}</p>
+                            <span class="media__arrow"></span>
+                        </div>
+                    </div>
+                    {{/media.result}}
+                    <ul class="media__nav">
+                        <li><a href="#" class="media__prev">Prev</a></li>
+                        <li><a href="#" class="media__next">Next</a></li>
+                    </ul>
+                </div>
+            </aside>
+        </div>
+    </section>
+    <!-- End of MAin Section  -->
 
-                <!-- End of MAin Section  -->
 
 
-
-            </main>
-            <!-- Pesho - generating handlebars template -->
+</main>
