--- a/public/index.css
+++ b/public/index.css
@@ -1,191 +1,197 @@
-    /* Adding custom fonts  */
-    
-    @font-face {
-        font-family: BlackJackReg;
-        src: url('./fonts/BLACKJAR.ttf') format('truetype');
-    }
-    
-    @font-face {
-        font-family: Kreon;
-        src: url('./fonts/Kreon-Regular.ttf') format('truetype');
-    }
-    
-    @font-face {
-        font-family: Kreon-Light;
-        src: url('./fonts/Kreon-Light.ttf') format('truetype');
-    }
-    
-    @font-face {
-        font-family: Droid-Sans;
-        src: url('./fonts/DroidSans.ttf') format('truetype');
-    }
-    /* General element settings */
-    
-    * {
-        box-sizing: border-box;
-    }
-    
-    body {
-        margin: 0;
-        border: 1px solid purple;
-        background-image: url('./pics/background.png');
-        box-shadow: 1px black;
-    }
-    
-    .main-window {
-        max-width: 960px;
-        margin: auto;
-        border-top: 1px solid rgb(255, 255, 255);
-        margin-top: 50px;
-        margin-bottom: 100px;
-        background-color: white;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-        min-height: 100vh;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.08), 0 0 25px rgba(0, 0, 0, 0.08);
-    }
-    
-    #template-content {
-        display: flex;
-        flex-direction: column
-    }
-    
-    main {
-        flex-grow: 1
-    }
-    
-    ul,
-    li {
-        list-style-type: none;
-    }
-    
-    a {
-        color: rgb(57, 57, 57);
-    }
-    
-    a:link {
-        text-decoration: none;
-        text-decoration-color: none
-    }
-    /* General Footer settings */
-    
-    footer {
-        background-color: rgb(249, 249, 249);
-        border: 1px solid rgb(255, 255, 255);
-        justify-content: space-between;
-        padding: 36px 50px 0 50px;
-    }
-    /* Main footer settings */
-    
-    .main-footer {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        padding-top: 36px;
-    }
-    
-    .main-footer-column {
-        flex-basis: 190px;
-        font-family: 'Droid-Sans';
-        font-size: 12px;
-        color: rgb(160, 160, 160);
-    }
-    
-    .main-footer-column>span {
-        font-family: 'Kreon-Light';
-        font-size: 20px;
-        color: rgb(29, 29, 29);
-        display: block;
-        margin-bottom: 20px;
-    }
-    /* Main footer first column logo settings */
-    
-    .main-footer-logo-img {
-        zoom: 70%;
-    }
-    
-    .main-footer-logo-text {
-        float: right;
-        padding-right: 47px;
-        font-family: 'Kreon-Light';
-        font-size: 20.22px;
-        color: rgb(17, 17, 17);
-        text-transform: uppercase;
-    }
-    
-    .main-footer-slogan-text {
-        float: right;
-        font-family: 'Droid-Sans';
-        font-size: 9.1px;
-        text-transform: uppercase;
-        color: rgb(102, 146, 156);
-        font-weight: 600;
-        margin-top: -12px;
-        padding-right: 49px
-    }
-    
-    .main-footer-column:first-child>span {
-        font-family: Kreon;
-        font-size: 12px;
-        margin-top: 11px;
-        margin-bottom: 11px;
-        color: rgb(131, 131, 131);
-    }
-    /* Main Footer List settings */
-    
-    .footer-list {
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .footer-list li {
-        list-style-type: disc;
-        padding-right: 0px;
-        margin-top: 0px;
-        margin-left: 0px;
-        margin-bottom: 16px
-    }
-    
-    .footer-list li:last-child {
-        margin-bottom: 0px;
-    }
-    /* Bottom footer settings */
-    
-    .bottom-footer {
-        display: flex;
-        flex-direction: row-reverse;
-        flex-wrap: wrap;
-        margin-right: 10px;
-        font-family: 'Kreon-Light';
-        font-size: 12px;
-        color: rgb(205, 205, 205);
-    }
-    
-    .bottom-footer-dark {
-        color: rgb(146, 146, 146);
-    }
-    
-    @media (min-width: 1100px) {
-        /* tova e defaultniq  */
-    }
-    
-    @media (max-width: 799px) and (min-width: 500px) {
-        .main-footer-column {
-            flex: 1 0 calc(50% - 10px);
-            padding: 30px;
+        /* Adding custom fonts  */
+        
+        @font-face {
+            font-family: BlackJackReg;
+            src: url('./fonts/BLACKJAR.ttf') format('truetype');
         }
-    }
-    
-    @media (max-width: 499px) {
-        .main-footer-column:first-child,
-        .main-footer-column:last-child {
-            display: none
+        
+        @font-face {
+            font-family: Kreon;
+            src: url('./fonts/Kreon-Regular.ttf') format('truetype');
         }
+        
+        @font-face {
+            font-family: Kreon-Light;
+            src: url('./fonts/Kreon-Light.ttf') format('truetype');
+        }
+        
+        @font-face {
+            font-family: Droid-Sans;
+            src: url('./fonts/DroidSans.ttf') format('truetype');
+        }
+        /* General element settings */
+        
+        * {
+            box-sizing: border-box;
+        }
+        
+        body {
+            margin: 0;
+            border: 1px solid purple;
+            background-image: url('./pics/background.png');
+            box-shadow: 1px black;
+        }
+        
+        .main-window {
+            max-width: 960px;
+            margin: auto;
+            border-top: 1px solid rgb(255, 255, 255);
+            margin-top: 50px;
+            margin-bottom: 100px;
+            background-color: white;
+            /* display: flex;
+        flex-wrap: wrap;
+        flex-direction: column; */
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.08), 0 0 25px rgba(0, 0, 0, 0.08);
+        }
+        
+        #template-content {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+        }
+        
+        ul,
+        li {
+            list-style-type: none;
+        }
+        
+        a {
+            color: rgb(57, 57, 57);
+        }
+        
+        a:link {
+            text-decoration: none;
+            text-decoration-color: none
+        }
+        /* General Footer settings */
+        
+        footer {
+            display: flex;
+            flex-wrap: wrap;
+            background-color: rgb(249, 249, 249);
+            border: 1px solid rgb(255, 255, 255);
+            justify-content: space-between;
+            padding: 36px 50px 30px 50px;
+            max-height: 320px;
+            overflow: hidden;
+        }
+        /* Main footer settings */
+        
         .main-footer {
-            padding-top: 10px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
         }
+        
         .main-footer-column {
-            margin-bottom: 20px
+            flex-basis: 190px;
+            font-family: 'Droid-Sans';
+            font-size: 12px;
+            color: rgb(160, 160, 160);
+            line-height: 20px
         }
-    }
+        
+        .main-footer-column>span {
+            font-family: 'Kreon-Light';
+            font-size: 20px;
+            color: rgb(29, 29, 29);
+            display: block;
+            margin-bottom: 14px;
+        }
+        /* Main footer first column logo settings */
+        
+        .main-footer-logo-img {
+            zoom: 70%;
+        }
+        
+        .main-footer-logo-text {
+            float: right;
+            padding-right: 47px;
+            font-family: 'Kreon-Light';
+            font-size: 20.22px;
+            color: rgb(17, 17, 17);
+            text-transform: uppercase;
+        }
+        
+        .main-footer-slogan-text {
+            float: right;
+            font-family: 'Droid-Sans';
+            font-size: 9.1px;
+            text-transform: uppercase;
+            color: rgb(102, 146, 156);
+            font-weight: 600;
+            margin-top: -12px;
+            padding-right: 49px
+        }
+        
+        .main-footer-column:first-child>span {
+            font-family: Kreon;
+            font-size: 12px;
+            margin-top: 11px;
+            margin-bottom: 11px;
+            color: rgb(131, 131, 131);
+        }
+        /* Main Footer List settings */
+        
+        .footer-list {
+            display: flex;
+            flex-direction: column;
+        }
+        
+        .footer-list li {
+            list-style-type: disc;
+            padding-right: 0px;
+            margin-top: 0px;
+            margin-left: 0px;
+            line-height: 25px;
+        }
+        
+        .footer-list li:last-child {
+            margin-bottom: 60px;
+        }
+        /* Bottom footer settings */
+        
+        .bottom-footer {
+            float: right;
+            margin-right: 10px;
+            margin-left: auto;
+            font-family: 'Kreon-Light';
+            font-size: 12px;
+            color: rgb(205, 205, 205);
+        }
+        
+        .bottom-footer-dark {
+            color: rgb(146, 146, 146);
+        }
+        
+        @media (min-width: 1100px) {
+            /* tova e defaultniq  */
+        }
+        
+        @media (max-width: 1050px) and (min-width: 800px) {
+            .main-footer-column:last-child {
+                display: none
+            }
+        }
+        
+        @media (max-width: 799px) and (min-width: 500px) {
+            .main-footer-column:first-child,
+            .main-footer-column:last-child {
+                display: none
+            }
+        }
+        
+        @media (max-width: 499px) {
+            footer {
+                padding-top: 15px;
+                border-top: 1px solid darkgray
+            }
+            .main-footer-column:not(:first-child) {
+                display: none
+            }
+            .main-footer-column {
+                float: right;
+                margin-bottom: 30px
+            }
+        }
