--- a/public/styles/hometest.css
+++ b/public/styles/hometest.css
@@ -1,5 +1,3 @@
-    /* Top Header container general settings  */
-    
     .top-header {
         display: flex;
         flex-direction: row;
@@ -9,7 +7,6 @@
         position: relative;
         background-image: linear-gradient( rgb(248, 248, 248), rgb(255, 255, 255));
     }
-    /* Top Header left side logo section  */
     
     .top-header-logo {
         margin-right: auto;
@@ -39,7 +36,6 @@
         position: relative;
         top: 30px
     }
-    /* Top Header Nav */
     
     .top-header-nav {
         display: flex;
@@ -69,7 +65,6 @@
     .top-header-display-icon {
         display: none;
     }
-    /* Top Header right top panel section search & social icons */
     
     .top-header-panel {
         position: relative;
@@ -122,7 +117,6 @@
         top: 35px;
         right: -90px
     }
-    /* Secondary Header settings */
     
     .secondary-header {
         height: 56px;
@@ -138,7 +132,6 @@
         padding-left: 23px;
         display: flex;
     }
-    /* Secondary header nav settings */
     
     .secondary-header-nav {
         display: flex;
@@ -157,7 +150,6 @@
         color: rgb(67, 125, 139);
         font-weight: 600;
     }
-    /* carousel general*/
     
     .carousel {
         max-width: 960px;
@@ -172,7 +164,6 @@
         box-shadow: 1px 4px 6px 1px rgba(0, 0, 0, 0.08);
         z-index: 3
     }
-    /* Carousel navigation arrows and bottom points*/
     
     .carousel-control {
         max-width: 90px
@@ -260,7 +251,6 @@
         bottom: 0;
         z-index: 10;
     }
-    /* Jumbotron settings */
     
     .main-jumbotron-section {
         background-color: rgb(255, 255, 255);
@@ -290,13 +280,6 @@
         /* margin-top: 55px; */
         width: 890px;
         margin-bottom: 40px;
-    }
-    /* Peter Previews settings  */
-    
-    #main-content {
-        display: flex;
-        flex-direction: column;
-        flex-flow: flex;
     }
     
     .previews {
@@ -358,7 +341,6 @@
         background: url("../pics/open-trip-img.png");
         visibility: hidden;
     }
-    /* Peter Blog Media middle section  */
     
     .blog-media {
         display: flex;
@@ -392,7 +374,6 @@
         font-size: 20px;
         color: rgb(74, 74, 74);
     }
-    /* petar media section */
     
     .media {
         margin-top: 0;
@@ -404,285 +385,11 @@
     
     .media__bar {
         max-width: 550px;
-        position: absolute;
+        /* position: absolute; */
         border-radius: 0.25em;
         padding: 1.08em 1.17em 1.25em 2.33em;
         box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
         border: 1px solid #f0f0f0;
         border-right-color: #d1d1d1;
         border-bottom-color: #d1d1d1;
-    }
-    
-    .media__img-container {
-        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-        border: 1px solid #f0f0f0;
-        border-right-color: #d1d1d1;
-        border-bottom-color: #d1d1d1;
-        position: relative;
-        float: left;
-        margin-right: 1.42em;
-        padding: 0.25em;
-        width: 4.5em;
-        height: 4.5em;
-    }
-    
-    .media__img-container:hover .media__img {
-        opacity: 0.5
-    }
-    
-    .media__img-container:hover .media__hover-icon {
-        visibility: visible;
-    }
-    
-    .media__img-container:hover .media__description {
-        display: block;
-    }
-    
-    .media__img-container:first-child:hover .media-hover-video-icon {
-        visibility: visible;
-    }
-    
-    .media__img-container:first-child:hover .media__description {
-        display: none
-    }
-    
-    .media__hover-icon {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        display: inline-block;
-        margin-top: -1.20em;
-        margin-left: -1.20em;
-        width: 33px;
-        height: 33px;
-        background: url("../pics/media-magnifying-glass.png");
-        visibility: hidden;
-    }
-    
-    .media-hover-video-icon {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        display: inline-block;
-        margin-top: -1.20em;
-        margin-left: -1.20em;
-        width: 33px;
-        height: 33px;
-        visibility: hidden;
-        background: url("../pics/media-hover-video-icon.png");
-    }
-    
-    .media__description {
-        display: none;
-        position: absolute;
-        bottom: 5.25em;
-        left: -4.83em;
-        width: 11.67em;
-        padding: 1.25em 1.25em 0.67em;
-        z-index: 99;
-        background: #fff;
-        border: 1px solid #f0f0f0;
-        border-bottom: 1px solid #d1d1d1;
-        border-radius: 0.83em;
-        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
-        font-family: Georgia, serif;
-        color: #929292;
-        font-style: italic;
-    }
-    
-    .media__arrow {
-        display: block;
-        position: absolute;
-        width: 1.17em;
-        height: 0.67em;
-        bottom: -0.67em;
-        left: 6.67em;
-        background: url("../pics/media-arrow.png") no-repeat;
-    }
-    
-    .media__nav a {
-        position: absolute;
-        top: 50%;
-        margin-top: -1.1em;
-        width: 2.25em;
-        height: 2.25em;
-        text-indent: 100%;
-        white-space: nowrap;
-        overflow: hidden;
-        background-size: cover;
-        z-index: 99;
-        pointer-events: none;
-    }
-    
-    .media__prev {
-        left: -1em;
-        background: url("../pics/media-left-arrow.png");
-    }
-    
-    .media__next {
-        right: -1em;
-        background: url("../pics/media-right-arrow.png");
-    }
-    
-    @media (max-width: 1050px) and (min-width: 800px) {
-        /* Header and Top NAvigation behaviour  */
-        .top-header {
-            display: flex;
-            flex-direction: column;
-            flex-wrap: flex;
-            align-items: center;
-            position: none
-        }
-        .top-header-nav {
-            position: relative;
-            left: -100px
-        }
-        .top-header-panel {
-            left: 50%
-        }
-        .media__img-container:first-child {
-            background: red;
-            display: none
-        }
-        .media__bar {
-            max-width: 500px;
-            margin-left: -50px;
-        }
-    }
-    
-    @media (max-width: 799px) and (min-width: 500px) {
-        /* Header and Top NAvigation behaviour  */
-        .top-header-logo-img {
-            visibility: hidden;
-            float: right
-        }
-        .top-header-logo-text {
-            top: 0px
-        }
-        .secondary-header {
-            display: none
-        }
-        .top-header-panel {
-            right: 0px;
-        }
-        .top-header-nav {
-            position: relative;
-            top: -70px
-        }
-        .main-jumbotron-section {
-            margin-top: 40px;
-            margin-bottom: 10px;
-            padding-bottom: 20px
-        }
-        .main-jumbotron-section h2 {
-            font-size: 1.8em
-        }
-        .main-jumbotron-section p {
-            font-size: 1.4em
-        }
-        .section-separator {
-            margin: 20px
-        }
-        .media__bar {
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            flex-wrap: wrap;
-        }
-        .media {
-            margin-top: -270px;
-        }
-    }
-    
-    @media (max-width: 499px) {
-        /* Header and Top NAvigation behaviour  */
-        .secondary-header {
-            display: none;
-        }
-        .top-header {
-            height: 10px
-        }
-        .top-header-nav {
-            display: none
-        }
-        .top-header-nav li a {
-            z-index: 6;
-            color: orange;
-            background-color: white;
-            font-size: 18px
-        }
-        .top-header-logo-img {
-            display: none
-        }
-        .top-header-logo-text {
-            top: 0px
-        }
-        .top-header-panel {
-            display: none
-        }
-        .top-header-display-icon {
-            display: block;
-            padding-right: 20px;
-            padding-bottom: 15px;
-            float: right;
-        }
-        .responsive {
-            display: inline-block;
-            z-index: 100;
-            position: absolute;
-            top: 0px
-        }
-        .carousel-caption {
-            display: none;
-        }
-        .section-separator {
-            margin: 10px
-        }
-        .main-jumbotron-section {
-            margin-top: 30px;
-            margin-bottom: 10px;
-            padding-bottom: 0px
-        }
-        .main-jumbotron-section h2 {
-            font-size: 1.5em
-        }
-        .main-jumbotron-section p {
-            display: none
-        }
-        #main-content {
-            justify-content: center;
-        }
-        .previews {
-            justify-content: center
-        }
-        .blog-media {
-            /* display: flex;
-            flex-direction: column;
-            justify-content: center;
-            flex-wrap: wrap */
-            justify-content: center
-        }
-        .blog-p {
-            margin-left: 7rem;
-        }
-        .media {
-            padding-bottom: 320px;
-            /* display: flex;
-            flex-direction: column;
-            justify-content: center; */
-            /* position: relative */
-        }
-        .media__img-container:not(:first-child) {
-            display: none
-        }
-        .media__bar {
-            /* position: absolute;
-            top: 30rem;
-            left: 15%;
-            zoom: 160% */
-            position: absolute;
-            margin-left: -190px;
-            margin-top: 90px;
-            zoom: 160%
-        }
     }
