post page complete

--- a/public/views/home.hbs
+++ b/public/views/home.hbs
@@ -25,7 +25,7 @@
             </div>
         </div>
 
-        <ul class="top-header-nav" id="todor">
+        <ul class="top-header-nav" id="mobile-menu">
             <li><a href="#" class="first-el">Home</a></li>
             <li><a href="#" class="">About</a></li>
             <li><a href="#" class=" ">Contact</a></li>
